# referral_system_tz

./: .env.exemple  Dockerfile  README.md  docker-compose.yml  dump.rdb  pyproject.toml
config/: celery.py  settings.py  urls.py
core/: constants.py
users/: models.py  serializers.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_referral_code.py
